Channel list now loads older channel videos as expected

--- a/vue/TODO
+++ b/vue/TODO
@@ -1,9 +1,9 @@
 
 WordPress Move TODOS
-1. Setup taxonomy searching / related videos
+xxx1. Setup taxonomy searching / related videos
 2. Dry some of the API code. Ex: Getting meta data for a video.
-
-
+3. Like and History updated to wordpress
+4. Channel Page. Should channel page really just be the latest video page?
 
 
 
